# pymbar

./: .codecov.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  LICENSE  README.md  appveyor.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  setup.py.old
.github/workflows/: CI.yaml
PYMBAR/: confidenceintervals.py  utils_for_testing.py
PYMBAR/testsystems/: __init__.py
devtools/: README.md
devtools/appveyor/: install.ps1
devtools/ci/: after_sucess.sh  install.sh  requirements-conda.txt
devtools/conda-envs/: test_env.yaml  test_env_jax.yaml  test_env_nojax.yaml
devtools/conda-recipe/: README.md  meta.yaml
devtools/github-actions/: initialize_conda.sh
devtools/scripts/: create_conda_env.py
devtools/travis-ci/: after_success.sh  install.sh  push-docs-to-s3.py
docs/: Makefile  conf.py  fes_with_pymbar.rst  getting_started.rst  index.rst  mbar.rst  moving_from_pymbar3.rst  other_estimators.rst  pymbar_version.py  references.bib  rtd_requirements.txt  strategies_for_solution.rst  testsystems.rst  timeseries.rst  utils.rst
docs/pymbar-docs/: .buildinfo  genindex.html  getting_started.html  index.html  mbar.html  np-modindex.html  (+6 more)
examples/: README.md  harmonic-oscillators-distributions.py  harmonic-oscillators-distributions.py_output.txt  harmonic-oscillators.py
notes/: notes.aux  notes.tex  notes.tex~
old/: test-harmonic-oscillators-distributions.py  test-harmonic-oscillators.py  test_mbar_harmonic_oscillators_old.py
pymbar/: __init__.py  _deprecate.py  _pymbar.c  _version.py  bar.py  confidenceintervals.py  exp.py  exponential_averaging.py  fes.py  legacy_interface.py  logging_utils.py  mbar.py  mbar_solvers.py  newpymbar.py  old_mbar.py  oldtestsystems.py  other_estimators.py  pmf.py  pymbar.py  testsystemsv2.py  timeseries.py  utils.py  utils_for_testing.py  version.py
scripts/: benchmark_covariance.py  benchmark_mbar.py  harmonic_oscillators_update.py  testing_means.py
tests/: README.md  test-harmonic-oscillators.py  test_covariance.py  test_mbar.py  test_mbar_exponential_distributions.py  test_mbar_harmonic_oscillators.py  test_mbar_solvers.py  test_timeseries.py
(+536 files in other folders)
