[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*

[metadata]
description-file = README.md

[aliases]
test = pytest

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning:patsy.*
    ignore::PendingDeprecationWarning

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = pymbar/_version.py
versionfile_build = pymbar/_version.py
tag_prefix = ''
parentdir_prefix = pymbar-